Fix: header z-index 변경에 따른 modal z-index 변경

--- a/src/styles/TimeModal.scss
+++ b/src/styles/TimeModal.scss
@@ -4,7 +4,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  z-index: 1000;
+  z-index: 9999;
   background-color: rgba(0, 0, 0, 0.7);
 
   .time-modal {
